[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gui/Viewers/ViewerSkin.gd" type="Script" id=1]

[node name="ViewerSkin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HSplitContainer" groups=[
"viewport",
]]
margin_right = 956.0
margin_bottom = 720.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
expand = true
stretch_mode = 6
flip_v = true

[node name="SpeedLabel" type="Label" parent="HSplitContainer/TextureRect"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Speed: 2.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HSplitContainer"]
margin_left = 964.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_rect_changed" from="HSplitContainer/TextureRect" to="." method="_on_TextureRect_item_rect_changed"]
[connection signal="item_selected" from="HSplitContainer/ItemList" to="." method="_on_ItemList_item_selected"]
